--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container container-main">
-  <%# @reservation = Reservation.new %>
   <div class="row">
     <div class="column">
       <div>
-        <h4 class="mt-3 mb-0">There are <strong style="color: #5A8F28;"><%= @recipes.count %></strong> recipes available around you!</h4>
+        <h4 class="mt-3 mb-0">There are <strong style="color: #5A8F28;"><%= @recipes.count %></strong> recipes available around you in <strong style="color: #5A8F28;"
+><%= params[:location] %></strong> !</h4>
       </div>
       <div class="cards">
         <% n = 0  %>
@@ -123,16 +123,17 @@
         <% end %>
       </div>
     </div>
-    <%# Map %>
-
-    <div class="column">
-      <div id="map"
-        style="height: 600px;"
-        data-markers="<%= @markers.to_json %>"
-        data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      <%# Map %>
+      <div class="column" id="map-box">
+        <div id="map"
+          style="height: 700px;"
+          data-markers="<%= @markers.to_json %>"
+          data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
       </div>
-    </div>
 
     <%# -------- %>
   </div>
 </div>
+
+
