--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -35,6 +35,11 @@
       font-weight: bold;
       margin: 0;
       color: black;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 1; /* number of lines to show */
+      -webkit-box-orient: vertical;
     }
     p {
       font-size: 12px;
@@ -47,8 +52,11 @@
     }
   }
 
-  .recipe-card > img {
+  
+  .recipe-card img {
     height: 175px;
     width: 100%;
     object-fit: cover;
+    overflow: hidden
+
   }
