--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,14 +5,23 @@
   padding: 0;
 }
 
-.row {
-  width: 100%;
-}
+// .row {
+//   width: 100%;
+// }
 
 .column {
   width: 50%;
 }
 
+.available-text {
+  margin-left: 16px;
+  p {
+    font-size: 16px;
+  }
+  h6 {
+    font-size: 22px;
+  }
+}
 
 // Modal
 .modal-header {
@@ -99,5 +108,6 @@
   // margin-left: 30px;
   width: 100%;
   margin-left: 16px;
+  margin-top: 138px;
 }
 
