--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,9 +1,9 @@
 <div class="container container-main">
   <div class="row">
     <div class="column">
-      <div>
-        <h4 class="mt-3 mb-0">There are <strong style="color: #5A8F28;"><%= @recipes.count %></strong> recipes available around you in <strong style="color: #5A8F28;"
-><%= params[:location] %></strong> !</h4>
+      <div class="available-text">
+        <p class="mt-3 mb-0">There are <strong style="color: #5A8F28;"><%= @recipes.count %></strong> recipes available around you in </p>
+        <h6><strong style="color: #5A8F28;"><%= params[:location] %></strong> !</h6>
       </div>
       <div class="cards">
         <% n = 0  %>
