--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -5,9 +5,9 @@
   padding: 0;
 }
 
-// .row {
-//   width: 100%;
-// }
+.row {
+  width: 100%;
+}
 
 .column {
   width: 50%;
@@ -82,6 +82,11 @@
       flex-grow: 1;
       margin-top: 16px;
     }
+  }
+
+  .ingredient-img {
+    width: 40px;
+    border-radius: 50%;
   }
 
   .row-ingredients {
