price to float with 2 decimals and removed html tags from recipe description

--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -97,7 +97,11 @@
 
                   <div class="recipe-instructions">
                     <h5><strong>Recipe Instructions</strong></h5>
-                    <p><%= recipe.description %></p>fmodal-footer-button
+                    <p><%= 
+                      recdes = recipe.description 
+                      recdes.gsub(/<\/?[^>]*>/, "")
+                    %></p>fmodal-footer-button
+                    
                   </div>
 
                 </div>
