--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -60,7 +60,7 @@
                         <% order.recipe.amounts.each do |amount| %>
                             <% order_price += amount.ingredient.price %>
                         <% end %>
-                        <p class="mb-0"><span><strong id="summary"><%= order_price %> €</strong></span></p class="mb-0">
+                        <p class="mb-0"><span><strong id="summary"><%= order_price.round(2) %> €</strong></span></p class="mb-0">
                       <% end %>
                     </div>
                   </div>
@@ -195,7 +195,7 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">
                 Temporary amount
-                <span> <%= total %> €</span>
+                <span> <%= total.round(2) %> €</span>
               </li>
               <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                 Delivery Costs
@@ -216,7 +216,7 @@
                       <% total += amount.ingredient.price %>
                     <% end %>
                   <% end %>
-                  <p>Total: <%= total %> €</p>
+                  <p>Total: <%= total.round(2) %> €</p>
                 </div>
                 </strong></span>
               </li>
