--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <%# -----Navbar----- %>
-<div class="navbar navbar-expand-sm navbar-light navbar-home" style="position: fixed">
+<div class="navbar navbar-expand-sm navbar-light navbar-home" style="position: fixed" id="navbarHome">
   <%= link_to "#", class: "navbar-brand" do %>
     <%#= image_tag "https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/logo.png" %>
     <% end %>
