fixed the navbar

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -141,6 +141,8 @@ html {
   position: absolute;
   width: 100vw;
   height: 106px;
+  opacity: 1;
+  background-color: transparent;
 }
 
 .navbar-home .navbar-collapse {
@@ -211,3 +213,5 @@ p {
 #boxes {
   height: 400px;
 }
+
+
