--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -47,12 +47,13 @@
   }
 
   .modal-body {
-    padding: 8px 16px 8px 16px;
+    padding: 8px 0px;
 }
 
   .modal-body-info {
       width: 100%;
       height: 30px;
+      padding-left: 24px;
   }
 
   .modal-body-info-item {
@@ -67,6 +68,7 @@
 
   .container-ingredients {
     margin: 0;
+    padding-left: 24px;
     h5 {
       margin-top: 32px;
       margin-bottom: 0;
@@ -95,6 +97,7 @@
 
   .recipe-instructions {
     padding-top: 32px;
+    padding-left: 24px;
   }
 
   .modal-footer-button {
