--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -12,14 +12,14 @@
           <% @orders.each do |order|%>
             <div class="order-card">
               <div class="row mb-4">
-                <div class="col-md-5 col-lg-3 col-xl-3">
+                <div class="col-md-3 col-lg-3 col-xl-3">
                   <div class="view zoom overlay z-depth-1 rounded mb-3 mb-md-0">
 <!--                     <img class="img-fluid w-100"
                       src="https://images.pexels.com/photos/4079520/pexels-photo-4079520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260" alt="Sample"> -->
                     <%= cl_image_tag order.recipe.photo.key, height: 100, width: 150, crop: :fill %>
                   </div>
                 </div>
-                <div class="col-md-7 col-lg-9 col-xl-9">
+                <div class="col-md-9 col-lg-9 col-xl-9 ingredients-basket-wrapper">
                   <div>
                     <div class="d-flex justify-content-between">
                       <div>
@@ -33,7 +33,7 @@
                         <p class="mb-3 text-muted text-uppercase small">Size: M</p> %>
                       </div>
                       <div>
-                        <div class="def-number-input number-input safari_only mb-0 w-100">
+                        <div class="def-number-input number-input safari_only mb-0" style="width: 100px">
                           <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
                             class="minus decrease">
                               <i class="fas fa-minus"></i>
