--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -31,11 +31,10 @@
 .modal-header-image {
     width: 100%;
     position: relative;
-
     h3 {
       position: absolute;
       left: 8px;
-      top: 360px;
+      bottom: 0px;
     }
     .close {
       position: absolute;
@@ -43,6 +42,7 @@
     }
     img {
       width: 100%;
+      // background-image: linear-gradient(to bottom, rgba(0, 250, 0, 1) 20%, rgba(100, 51, 51, 0.6) 86%, rgba(51, 51, 51, 0.8) 100%);
     }
   }
 
@@ -57,7 +57,7 @@
   }
 
   .modal-body-info-item {
-    width: 33.3%;
+    width: 20%;
     padding: 0;
   }
 
