--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -23,7 +23,7 @@
             <%= @basket.orders.count %>
           </p>
         </div>
-        <li class="nav-item dropdown">
+        <li class="nav-item dropdown" style="cursor: pointer">
           <%= image_tag "https://kitt.lewagon.com/placeholder/users/LSchemuth", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
             <%= link_to "My Profile", "#", class: "dropdown-item" %>
