added linear gradient to modal foto

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -126,6 +126,15 @@
       </div>
     </div>
   </div>
+
+  <div class="row row-cols-1">
+    <div class="col mb-4">
+      <!-- 21:9 aspect ratio -->
+      <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube-nocookie.com/embed/i8xwLWb0lLY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
 </div>
 
 
