--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -35,6 +35,7 @@
       position: absolute;
       left: 8px;
       bottom: 0px;
+      color: white;
     }
     .close {
       position: absolute;
