--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -43,11 +43,12 @@
                   <div class="modal-header-image">
 
                     <% if recipe.photo.attached? %>
-                      <%= cl_image_tag recipe.photo.key, height: 400, crop: :fill %>
+                      <div style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2), rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('<%= cl_image_path recipe.photo.key, crop: :fill %>'); 
+                      height: 400px; background-size: cover; background-position: center;"></div>
                     <% else %>
                       <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597150377/Cookclever/placeholder.png" style="width: 50%">
                     <% end %>
-                    <h3 class="card-title"><strong><%= recipe.title %></strong></h3>
+                    <h3 class="card-title "><strong><%= recipe.title %></strong></h3>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
