--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -127,6 +127,7 @@
     </div>
   </div>
 
+  <%# Video  %>
   <div class="row row-cols-1">
     <div class="col mb-4">
       <!-- 21:9 aspect ratio -->
