--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -6,9 +6,8 @@
         <h6><strong style="color: #5A8F28;"><%= params[:location] %></strong> !</h6>
       </div>
       <div class="cards">
-        <% n = 0  %>
         <% @recipes.each do |recipe|%>
-          <%= link_to recipe_path(recipe), "data-toggle" => "modal", 'data-target' => "#recipe#{n}" do %>
+          <%= link_to recipe_path(recipe), "data-toggle" => "modal", 'data-target' => "#recipe-#{recipe.id}" do %>
             <div class="recipe-card" data-supermarket-id="<%= recipe.supermarket.id %>">
               <% if recipe.photo.attached? %>
                 <%= cl_image_tag recipe.photo.key, height: 200, width: 300, crop: :fill %>
@@ -33,8 +32,7 @@
           <% end %>
 
           <%# Modal %>
-          <div class="modal faden" id="<%= "recipe#{n}" %>" tabindex="-1" role="dialog" aria-labelledby="<%= "recipe#{n}Label" %>" aria-hidden="true">
-            <% n += 1 %>
+          <div class="modal faden" id="<%= "recipe-#{recipe.id}" %>" tabindex="-1" role="dialog" aria-labelledby="<%= "recipe-#{recipe.id}Label" %>" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
               <div class="modal-content">
 
