--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -27,7 +27,7 @@
                         <%# <p class="mb-2 text-muted text-uppercase small">Color: blue</p>
                         <p class="mb-3 text-muted text-uppercase small">Size: M</p> %>
                       </div>
-             <!--          <div>
+                      <div>
                         <div class="def-number-input number-input safari_only mb-0 w-100">
                           <button onclick="this.parentNode.querySelector('input[type=number]').stepDown()"
                             class="minus decrease">
@@ -42,7 +42,7 @@
                         <%# <small id="passwordHelpBlock" class="form-text text-muted text-center">
                           (Note, 1 piece)
                         </small> %>
-                      </div> -->
+                      </div>
                     </div>
                     <div class="d-flex justify-content-between align-items-center">
                       <div>
@@ -66,7 +66,6 @@
                                       <%= ingredient_amount.quantity %>
                                       <%= link_to "+", increment_ordered_amount_path(ingredient_amount), method: :patch, class: "btn btn-primary" %>
                                       <%# </span> %>
-
                                     </div>
                                 <% end %>
                               </div>
