--- a/app/views/recipes/_info_window.html.erb
+++ b/app/views/recipes/_info_window.html.erb
@@ -3,6 +3,6 @@
 <p><%#= supermarket_recipes %></p>
 <ul>
   <% supermarket.recipes.each do |recipe| %>
-    <li><%= link_to recipe.title, recipe_path(recipe), "data-toggle" => "modal", 'data-target' => "#recipe-#{recipe.id}" %>,</li>
+    <li><%= link_to recipe.title, recipe_path(recipe), "data-toggle" => "modal", 'data-target' => "#recipe-#{recipe.id}" %></li>
   <% end %>
 </ul>
