confirmation page without styling

--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -241,7 +241,7 @@
               </li>
             </ul>
 
-            <button type="button" class="btn btn-primary btn-block"><strong>Buy</strong></button>
+            <%= link_to "<strong>Buy</strong>".html_safe, confirmation_page_path, class: "btn btn-primary btn-block" %>
 
           </div>
         </div>
