--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -129,7 +129,7 @@
 
   <%# Video  %>
   <div class="row row-cols-1">
-    <div class="col mb-4">
+    <div class="col mb-4" style="margin-top: 100px">
       <!-- 21:9 aspect ratio -->
       <div class="embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube-nocookie.com/embed/i8xwLWb0lLY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
