confirmation page Design

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,5 +16,7 @@
 @import "components/card";
 @import "pages/index";
 @import "pages/home";
-@import "pages/basket_show"
+@import "pages/basket_show";
+@import "pages/order_confirmation"
+
 
