--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -35,7 +35,9 @@
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://images.pexels.com/photos/1660030/pexels-photo-1660030.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
   <div class="container">
     <div class="banner-wrapper">
-      <%= image_tag "logo.svg", class: "logoHome" %>
+      <div class="logo-background-wrapper">
+        <%= image_tag "logo.svg", class: "logoHome" %>
+      </div>
 
       <%= form_tag recipes_path, class: "form-inline needs-validation form-homepage", novalidate: true, method: :get do %>
       <label class="sr-only" for="inline-location">Location</label>
