--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -60,7 +60,7 @@
                     <a class="btn btn-primary" data-toggle="collapse" href="#order-<%= order.id %>" role="button" aria-expanded="false" aria-controls="order-<%= order.id %>">
                       Edit ingredients
                     </a>
-        
+
                     <div class="collapse" id="order-<%= order.id %>">
                       <div class="card card-body">
                         <% order.recipe.amounts.each do |amount| %>
@@ -79,13 +79,13 @@
                                 <div class="d-flex justify-content-between" style="width: 100px">
                                   <% ingredient_amount = order.ordered_amounts.find_by(ingredient: amount.ingredient) %>
                                   <span>
-                                    <%= link_to "-", decrement_ordered_amount_path(ingredient_amount), method: :patch, class: "btn btn-primary", style: "background-color: #B9BEA5" %>
+                                    <%= link_to '<i class="fas fa-minus ml-1 mr-1"></i>'.html_safe, decrement_ordered_amount_path(ingredient_amount), method: :patch, class: "minus button"%>
                                   </span>
                                   <span style="width: 30px; text-align: center">
                                     <%= ingredient_amount.quantity %>
                                   </span>
                                   <span>
-                                    <%= link_to "+", increment_ordered_amount_path(ingredient_amount), method: :patch, class: "btn btn-primary", style: "background-color: #B9BEA5" %>
+                                    <%= link_to '<i class="fas fa-plus ml-1 mr-1"></i>'.html_safe, increment_ordered_amount_path(ingredient_amount), method: :patch, class: "plus button"%>
                                   </span>
                                   <%# </span> %>
                                 </div>
@@ -174,9 +174,9 @@
                             </label> <input type="text" required class="form-control"> </div>
                     </div>
                 </div>
-                
+
             </form>
-        
+
         </div> <!-- End -->
         <!-- Paypal info -->
         <div id="paypal" class="tab-pane fade pt-3">
