--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -22,8 +22,10 @@
                     <p><%= recipe.supermarket.name %></p>
                     <% price = 0 %>
                     <% recipe.amounts.each do |amount| %>
-                      <% price += amount.ingredient.price %>
+                      <% multiplicator = amount.quantity < 1 ? 1 : amount.quantity.round %>
+                      <% price += (amount.ingredient.price * multiplicator)%>
                     <% end %>
+
                     <p><strong><%= price.round(2) %> €</strong></p>
                   </div>
                 </div>
@@ -41,7 +43,7 @@
                   <div class="modal-header-image">
 
                     <% if recipe.photo.attached? %>
-                      <div style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2), rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('<%= cl_image_path recipe.photo.key, crop: :fill %>'); 
+                      <div style="background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.2), rgba(0,0,0,0.4), rgba(0,0,0,0.6)), url('<%= cl_image_path recipe.photo.key, crop: :fill %>');
                       height: 400px; background-size: cover; background-position: center;">
                         <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="color: white">
                           <span aria-hidden="true">&times;</span>
@@ -61,7 +63,8 @@
                     <div class="modal-body-info-item"><strong>Calories:</strong></div>
                     <% price = 0 %>
                     <% recipe.amounts.each do |amount| %>
-                      <% price += amount.ingredient.price %>
+                      <% multiplicator = amount.quantity < 1 ? 1 : amount.quantity.round %>
+                      <% price += (amount.ingredient.price * multiplicator)%>
                     <% end %>
                     <div class="modal-body-info-item"><strong>Price:</strong></div>
                   </div>
@@ -97,11 +100,11 @@
 
                   <div class="recipe-instructions">
                     <h5><strong>Recipe Instructions</strong></h5>
-                    <p><%= 
-                      recdes = recipe.description 
+                    <p><%=
+                      recdes = recipe.description
                       recdes.gsub(/<\/?[^>]*>/, "")
                     %></p>
-                    
+
                   </div>
 
                 </div>
