animated text carousel on homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -32,7 +32,7 @@
 
 <%# -----Banner incl. Location Search----- %>
 
-<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(https://images.pexels.com/photos/1660030/pexels-photo-1660030.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.4)), url(https://images.pexels.com/photos/1660030/pexels-photo-1660030.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);">
   <div class="container">
     <div class="banner-wrapper">
       <div class="logo-background-wrapper">
@@ -55,7 +55,15 @@
 
       <% end %>
 
-      <h1>Explore healthy and sustainable recipes with <strong style="color: #5A8F28;">CookClever</strong></h1>
+      <div class="banner-headline">
+        <h1>Explore 
+          <span
+            class="txt-rotate"
+            style="color: #F2CB80"
+            data-period="2000"
+            data-rotate='[ "healthy", "sustainable", "clever", "tasty" ]'></span> 
+        recipes with <strong style="color: #5A8F28;">CookClever</strong></h1>
+      </div>
       <p style="opacity: 0.8">Find tasty recipes and save food from being wasted</p>
 
 
