--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -79,6 +79,37 @@ html {
   padding-top: 100px;
 }
 
+// .banner-headline h1 {
+//   overflow: hidden; /* Ensures the content is not revealed until the animation */
+//   border-right: .1em solid #5A8F28; /* The typwriter cursor */
+//   white-space: nowrap; /* Keeps the content on a single line */
+//   margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+//   letter-spacing: .05em; /* Adjust as needed */
+//   animation: 
+//     typing 3.5s steps(40, end),
+//     blink-caret .75s step-end infinite;
+// }
+
+// @keyframes typing {
+//   from { width: 0 }
+//   to { width: 100% }
+// }
+
+// @keyframes blink-caret {
+//   from, to { border-color: transparent }
+//   50% { border-color: #5A8F28; }
+// }
+
+.wrap {
+  animation: caret 1s steps(1) infinite;
+}
+
+@keyframes caret {
+  50% {
+    border-color: transparent;
+  }
+}
+
 .form-homepage {
   display: inline;
 }
@@ -93,6 +124,7 @@ height: 164px;
 width: 164px;
 border-radius: 50%;
 margin: 0 auto 100px;
+
 background-color: white;
 display: flex;
 justify-content: center;
