--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -64,7 +64,7 @@
             data-rotate='[ "healthy", "sustainable", "clever", "tasty" ]'></span> 
         recipes with <strong style="color: #5A8F28;">CookClever</strong></h1>
       </div>
-      <p style="opacity: 0.8">Find tasty recipes and save food from being wasted</p>
+      <p style="opacity: 0.8">... and save food from being wasted</p>
 
 
       <section>
