--- a/app/assets/stylesheets/pages/_basket_show.scss
+++ b/app/assets/stylesheets/pages/_basket_show.scss
@@ -1,61 +1,63 @@
 .container-basket {
-    background-color: white;
-    border-radius: 4px;
-    padding: 14px 15px;
-    h2 {
+  background-color: white;
+  border-radius: 4px;
+  padding: 14px 15px;
+  h2 {
+    text-align: center;
+  }
+  h4 {
       text-align: center;
-    }
-    h4 {
-        text-align: center;
     }
 }
 
 .minus {
-    border: black 1px solid;
-    border-radius: 2px;
-    background-color: white;
+  border: black 1px solid;
+  border-radius: 2px;
+  background-color: white;
+  padding: 5px 4px;
 }
 
 .minus:hover {
-    border: black 1px solid;
-    background-color: #90B46A;
-    i {
-      color: white;
-    }
+  border: black 1px solid;
+  background-color: #90B46A;
+  i {
+    color: white;
+  }
+  padding: 5px 4px;
 }
 
 .plus {
-    border: black 1px solid;
-    border-radius: 2px;
-    background-color: white;
+  border: black 1px solid;
+  border-radius: 2px;
+  background-color: white;
+  padding: 5px 4px;
 }
 
 .plus:hover {
-    border: black 1px solid;
-    background-color: #90B46A;
-    i {
-      color: white;
-    }
+  border: black 1px solid;
+  background-color: #90B46A;
+  i {
+    color: white;
+  }
+  padding: 5px 4px;
 }
 
 .quantity {
     width: 30px;
     text-align: center;
 }
-// Deactivate arrows in numeric input
-/* Chrome, Safari, Edge, Opera */
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
+// // Deactivate arrows in numeric input
+// /* Chrome, Safari, Edge, Opera */
+// input::-webkit-outer-spin-button,
+// input::-webkit-inner-spin-button {
+//   -webkit-appearance: none;
+//   margin: 0;
+// }
 
-/* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
-}
-
-
+// /* Firefox */
+// input[type=number] {
+//   -moz-appearance: textfield;
+// }
 
 // Payment Form
 .card-header-payment {
@@ -84,10 +86,10 @@ input[type=number] {
     color: white
 }
 
-input[type="radio"] {
-    margin-right: 5px
+// input[type="radio"] {
+//     margin-right: 5px
 
-}
+// }
 
 .bold {
     font-weight: bold
