--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -5,7 +5,7 @@
 <p> Please show the following QR-Code to the employees in the </p>
 <img src="https://res.cloudinary.com/dovh6vnvn/image/upload/v1597840315/QRCodeWikipedia_spsahv.png" alt="2453-7853-2680-2384">
 <br>
-<p>You did something great today by saving ingredients from thrwon away.</p>
+<p>You did something great today by saving ingredients from thrown away.</p>
 <p>Enjoy your food and have a nice day,</p>
 <p>Your Cookclever Team</p>
 
