--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -65,7 +65,7 @@
                     </a>
 
                     <div class="collapse" id="order-<%= order.id %>">
-                      <div class="card card-body">
+                      <div class="card card-body mt-4">
                         <% order.recipe.amounts.each do |amount| %>
                             <div class="recipe-item">
                               <div class="d-flex justify-content-between">
