--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
 @import "pages/index";
 @import "pages/home";
 @import "pages/basket_show";
-@import "pages/order_confirmation"
+@import "pages/order_confirmation";
+@import "pages/welcome"
 
 
