--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,6 +18,6 @@
 @import "pages/home";
 @import "pages/basket_show";
 @import "pages/order_confirmation";
-@import "pages/welcome"
+@import "pages/welcome";
 
 
