--- a/app/assets/stylesheets/pages/_order_confirmation.scss
+++ b/app/assets/stylesheets/pages/_order_confirmation.scss
@@ -3,7 +3,8 @@
 }
 
 .img-new {
-  height: 400px;
+  height: 450px;
+  width: 120%;
   background-size: cover;
   background-position: center;
   width: 110%;
@@ -13,7 +14,7 @@
 }
 
 .form-wrapper {
-  // margin-top: 20px;
+  margin-top: 20px;
   h2 {
     font-size: 24px;
   }
