--- a/app/views/confirmation_pages/show.html.erb
+++ b/app/views/confirmation_pages/show.html.erb
@@ -1,6 +1,7 @@
 <div class="container container-new-page mt-4">
   <div class="row">
     <div class="col-6 form-wrapper">
+      <h1>Thanks! You're Awesome.</h1>
       <% saved_ingredients = 0 %>
       <% @orders.each do |order| %>
         <% saved_ingredients += order.ordered_amounts.count %>
@@ -13,14 +14,12 @@
       <br>
       <h2>Yayyy! Thats how many ingredients you have saved from being thrown away!</h2>
       <br>
-      <h1>Thanks! You're Awesome.</h1>
-      <br>
-      <h3>You can pick up your bags at the following supermarket:</h3>
+      <p>You can pick up your bags at the following supermarket:</p>
       <% @orders.each do |order| %>
         <li><%= order.recipe.title%> @<%= order.recipe.supermarket.address%></li>
       <% end %>
       <br>
-      <p>Please check you Mailbox! We have sent you a confirmation mail with a pick-up code to <em><%= @user.email %></em>!</p>
+      <p>Please check your Mailbox! We have sent you a confirmation mail with a pick-up code to <em><%= @user.email %></em>.</p>
     </div>
     <div class="col-6" style="margin-top: 30px">
       <%= image_tag "order_confirmation.jpg", class: "img-new" %>
