--- a/app/views/confirmation_pages/show.html.erb
+++ b/app/views/confirmation_pages/show.html.erb
@@ -19,7 +19,7 @@
         <li><%= order.recipe.title%> @<%= order.recipe.supermarket.address%></li>
       <% end %>
       <br>
-      <p>Please check your Mailbox! We have sent you a confirmation mail with a pick-up code to <em><%= @user.email %></em>.</p>
+      <p>Please check your Mailbox! We have sent you a confirmation mail with a pick-up code to <em>lotta-schwarz@outlook.com</em>.</p>
     </div>
     <div class="col-6" style="margin-top: 30px">
       <%= image_tag "order_confirmation.jpg", class: "img-new" %>
